--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "escodegen": "^1.4.0"
+    "escodegen": "^1.4.0",
+    "esprima": "^1.2.2",
+    "json-query": "^1.1.0",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {},
   "scripts": {
